Various updates: - Increase clickable area of slider - Update button icons - Change help icon color - Decrease padding on small panel size - Add background color to expanded panels - Reorder input parts (help/label/toggle) - Fix slider wrapping on small size - Support drag+drop files to input - Change prompt input color - A few minor tweaks/fixes

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -261,6 +261,9 @@ input[type="range"]::-webkit-slider-thumb, input[type="range"]::-moz-range-thumb
     box-shadow: -407px 0 0 400px var(--emphasis);
     margin-top: -4px;
 }
+.auto-slider-range-wrapper {
+    display: contents;
+}
 .auto-slider-range {
     cursor: pointer;
     width: 90%;
