--- a/src/wwwroot/css/themes/modern_light.css
+++ b/src/wwwroot/css/themes/modern_light.css
@@ -17,21 +17,14 @@
     --text: #101010;
     --emphasis: #c7966b;
     --button-text: #101010;
-	--button-background-hover: color-mix(in srgb, var(--emphasis) 70%, white);
 
     --background-panel: #D9D9D9;
+    --background-panel-subtle: rgba(0, 0, 0, 0.03);
     --emphasis-text: #fff;
     --border-color: #aaa;
-    --panel-gap: 7px;
     --button-background: #a1a1a1;
-    --scrollbar: rgba(100, 100, 100, 0.5);
-    --range-value-color: var(--emphasis);
-    --range-track-background: #161616;
     --range-track-color: #B1B1B1;
     --range-thumb-color: #a1a1a1;
-    --range-thumb-color-hover: var(--button-background-hover);
-    --range-thumb-width: 20px;
-    --range-thumb-height: 10px;
     
     --qbutton: #8b6445;
 }
